fix(<Hero /> -> <TextBlock />): lower the 'z-index' property
This commit fixes a bug where the <TextBlock /> component inside
<Hero /> has a higher z-index than the modal component.

Now the modal component and the backdrop associated with it have the
highest z-index among all elements.

--- a/client/src/components/Hero/TextBlock/TextBlock.module.css
+++ b/client/src/components/Hero/TextBlock/TextBlock.module.css
@@ -1,8 +1,8 @@
 .hero__text-block {
     margin-right: 15%;
     width: 600px;
-    /* the top header has z-index: 999 */
-    z-index: 998;
+    /* the top header has z-index: 997 */
+    z-index: 996;
     background: rgba(0, 0, 0, .5);
     padding: 30px;
     border-radius: 20px;
